--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,7 @@ __pycache__/
 *.so
 
 ### VisualStudioCode ###
-.vscode/*      
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode/     
 
 
 # Distribution / packaging
