--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         conda env update --file environment.yml --name base
+        conda env update --file examples/examples_env.yml --name base
 #     - name: Lint with flake8
 #       run: |
 #         conda install flake8
