--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,6 +29,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f examples/examples_req.txt ]; then pip install -r examples/examples_req.txt; fi
 #     - name: Lint with flake8
 #       run: |
 #         python -m pip install flake8
